# xatlas

./: .gitignore  Bam.cpp  Bam.hpp  CMakeLists.txt  CoverageCounter.cpp  CoverageCounter.hpp  Dockerfile  EventScanner.cpp  EventScanner.hpp  GvcfBlock.cpp  IndelEvent.cpp  IndelEvent.hpp  LICENSE  Logit.cpp  Makefile.in  README.md  ReferenceSequence.cpp  ReferenceSequence.hpp  SnpEvent.cpp  SnpEvent.hpp  VcfWriter.cpp  VcfWriter.hpp  Xatlas.cpp  Xatlas.hpp  config.h.in  configure.ac
doc/: GettingStarted.md
include/xatlas/: Bam.h  CoverageCounter.h  EventScanner.h  GvcfBlock.h  IndelEvent.h  Logit.h  ReferenceSequence.h  SnpEvent.h  VcfWriter.h
src/: Bam.cc  CoverageCounter.cc  EventScanner.cc  GvcfBlock.cc  IndelEvent.cc  Logit.cc  ReferenceSequence.cc  SnpEvent.cc  VcfWriter.cc  Xatlas.cc
xatlas_nexus/: Readme.developer.md  Readme.md  dxapp.json
xatlas_nexus/src/: xatlas.sh
